--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.55.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.55.0-alpha.0",
+    "@tsconfig/node16": "^1.0.3",
     "@types/jest": "^29.2.4",
     "@types/node": "18.11.15",
+    "aws-cdk": "2.55.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "aws-cdk": "2.55.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
   "dependencies": {
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
+    "deepmerge": "^4.2.2",
     "source-map-support": "^0.5.21"
   }
 }
