--- a/.github/workflows/data-plane-deploy.yml
+++ b/.github/workflows/data-plane-deploy.yml
@@ -7,6 +7,9 @@ on:
       region:
         description: "Region to deploy"
         required: true
+      sourceFilesZipName:
+        description: Source files Zip Name:
+        required: false
 jobs:
   deploy-data-plane:
     runs-on: ubuntu-latest
@@ -24,4 +27,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ inputs.region }}
       - run: npm ci
-      - run: npm run cdk deploy -- --require-approval=never --context customerId=${{ inputs.customerId }}
+      - run: npm run cdk deploy -- --require-approval=never --context customerId=${{ inputs.customerId }} --context sourceFilesZipName=${{ inputs.sourceFilesZipName }}
