--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.0",
+    "@as-integrations/aws-lambda": "^1.1.0",
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
+    "graphql": "^16.6.0",
     "source-map-support": "^0.5.21"
   }
 }
