--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "devDependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.55.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.55.0-alpha.0",
+    "@graphql-codegen/cli": "2.16.1",
+    "@graphql-codegen/typescript": "2.8.5",
+    "@graphql-codegen/typescript-resolvers": "^2.7.10",
     "@tsconfig/node16": "^1.0.3",
     "@types/jest": "^29.2.4",
     "@types/node": "18.11.15",
     "aws-cdk": "2.55.0",
+    "esbuild": "^0.16.10",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
