--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "dependencies": {
     "@apollo/server": "^4.3.0",
     "@as-integrations/aws-lambda": "^1.1.0",
+    "@aws-sdk/client-dynamodb": "^3.241.0",
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
     "graphql": "^16.6.0",
+    "nanoid": "^4.0.0",
     "source-map-support": "^0.5.21"
   }
 }
