--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@graphql-codegen/cli": "2.16.1",
     "@graphql-codegen/typescript": "2.8.5",
     "@graphql-codegen/typescript-resolvers": "^2.7.10",
-    "@tsconfig/node16": "^1.0.3",
+    "@tsconfig/node18": "^1.0.1",
     "@types/jest": "^29.2.4",
     "@types/node": "18.11.15",
     "aws-cdk": "2.55.0",
@@ -31,6 +31,7 @@
     "@apollo/server": "^4.3.0",
     "@as-integrations/aws-lambda": "^1.1.0",
     "@aws-sdk/client-dynamodb": "^3.241.0",
+    "@aws-sdk/client-sts": "^3.241.0",
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
