feat: adding query forr application

--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@apollo/server": "^4.3.0",
     "@as-integrations/aws-lambda": "^1.1.0",
     "@aws-sdk/client-dynamodb": "^3.241.0",
+    "@aws-sdk/client-s3": "^3.241.0",
     "@aws-sdk/client-sts": "^3.241.0",
+    "@aws-sdk/credential-providers": "^3.241.0",
+    "@aws-sdk/s3-request-presigner": "^3.241.0",
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
