--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@aws-sdk/client-s3": "^3.241.0",
     "@aws-sdk/client-sts": "^3.241.0",
     "@aws-sdk/credential-providers": "^3.241.0",
+    "@aws-sdk/lib-dynamodb": "^3.241.0",
     "@aws-sdk/s3-request-presigner": "^3.241.0",
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
