--- a/.github/workflows/data-plane-deploy.yml
+++ b/.github/workflows/data-plane-deploy.yml
@@ -8,6 +8,9 @@ on:
       applicationId:
         description: "Application ID"
         required: true
+      awsAccountId:
+        descripttion: "AWS Account ID"
+        required: true
       region:
         description: "Region to deploy"
         required: true
@@ -28,7 +31,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::857786057494:role/GitHubDeployer
+          role-to-assume: arn:aws:iam::$${{ inputs.awsAccountId }}:role/GitHubDeployer
           aws-region: ${{ inputs.region }}
       - run: npm ci
       - run: npm run cdk deploy -- --require-approval=never --app "npx ts-node --prefer-ts-exts bin/data-plane.app.ts" --context customerId=${{ inputs.customerId }} --context applicationId=${{ inputs.applicationId }} --context sourceFilesZipName=${{ inputs.sourceFilesZipName }}
