--- a/.github/workflows/data-plane-deploy.yml
+++ b/.github/workflows/data-plane-deploy.yml
@@ -17,6 +17,9 @@ on:
       sourceFilesZipName:
         description: "Source files Zip Name"
         required: false
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read # This is required for actions/checkout
 jobs:
   deploy-data-plane:
     runs-on: ubuntu-latest
