--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@aws-sdk/credential-providers": "^3.241.0",
     "@aws-sdk/lib-dynamodb": "^3.241.0",
     "@aws-sdk/s3-request-presigner": "^3.241.0",
+    "@aws-sdk/util-arn-parser": "^3.208.0",
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
