--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "ship:cp": "npm run cdk deploy -- --require-approval=never --app 'npx ts-node --prefer-ts-exts bin/control-plane.app.ts' --hotswap"
   },
   "devDependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.55.0-alpha.0",
@@ -41,6 +42,7 @@
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
     "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.1",
     "nanoid": "^4.0.0",
     "source-map-support": "^0.5.21"
   }
