--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "aws-cdk-lib": "2.55.0",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "nanoid": "^4.0.0",
