--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.55.0-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.55.0-alpha.0",
     "@graphql-codegen/cli": "2.16.1",
+    "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/typescript": "2.8.5",
     "@graphql-codegen/typescript-resolvers": "^2.7.10",
     "@tsconfig/node18": "^1.0.1",
