--- a/src/control-plane/ui/app/package.json
+++ b/src/control-plane/ui/app/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.24.4",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
