--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@apollo/server": "^4.3.0",
     "@as-integrations/aws-lambda": "^1.1.0",
+    "@aws-sdk/client-cloudformation": "^3.264.0",
     "@aws-sdk/client-dynamodb": "^3.241.0",
     "@aws-sdk/client-s3": "^3.241.0",
     "@aws-sdk/client-sts": "^3.241.0",
