--- a/src/control-plane/ui/app/package.json
+++ b/src/control-plane/ui/app/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
@@ -24,6 +25,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.110",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
