--- a/src/control-plane/ui/app/package.json
+++ b/src/control-plane/ui/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
+    "@auth0/auth0-react": "^2.0.0",
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
