--- a/.github/workflows/control-plane.deploy.yml
+++ b/.github/workflows/control-plane.deploy.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Deploy UI
         uses: ./.github/actions/deploy-notlify
         with:
-          applicationName: test-app-2
+          applicationName: notlify
           distributionDirectory: src/control-plane/ui/app/out
