--- a/.github/workflows/data-plane-deploy-all.yml
+++ b/.github/workflows/data-plane-deploy-all.yml
@@ -1,4 +1,7 @@
 name: "Data Plane Deploy All"
+on:
+  workflow_dispatch:
+
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read # This is required for actions/checkout
