fix: workflow input

--- a/.github/workflows/data-plane-deploy-all.yml
+++ b/.github/workflows/data-plane-deploy-all.yml
@@ -20,7 +20,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::${{ inputs.awsAccountId }}:role/GitHubDeployer
-          aws-region: ${{ inputs.region }}
+          aws-region: us-east-1
       - run: npm ci
       - name: Deploy All
         uses: ./actions/deploy-all
