--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws-cdk": "2.55.0",
     "esbuild": "^0.16.10",
     "jest": "^29.3.1",
+    "sst": "^2.0.25",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
