--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@graphql-codegen/typescript": "2.8.5",
     "@graphql-codegen/typescript-resolvers": "^2.7.10",
     "@tsconfig/node18": "^1.0.1",
+    "@types/aws-lambda": "^8.10.110",
     "@types/jest": "^29.2.4",
     "@types/node": "18.11.15",
     "aws-cdk": "2.55.0",
     "esbuild": "^0.16.10",
     "jest": "^29.3.1",
-    "sst": "^2.0.25",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
@@ -42,11 +42,14 @@
     "@aws-sdk/s3-request-presigner": "^3.241.0",
     "@aws-sdk/util-arn-parser": "^3.208.0",
     "aws-cdk-lib": "2.55.0",
+    "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
     "nanoid": "^4.0.0",
     "source-map-support": "^0.5.21"
   }
