--- a/.github/workflows/control-plane.deploy.yml
+++ b/.github/workflows/control-plane.deploy.yml
@@ -9,6 +9,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            control-plane:
+              - 'src/control-plane/**'
+        # run only if some file in 'src/control-plane' folder was changed
+      - if: steps.changes.outputs.control-plane == 'true'
+        run: exit 1
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -26,7 +35,8 @@ jobs:
       - name: Build UI
         working-directory: ./src/control-plane/ui/app
         run: npm run build && npm run export
-      - run: npm run cdk deploy -- --require-approval=never --all --app "npx ts-node --prefer-ts-exts bin/control-plane.app.ts"
+      - name: Deploy UI
+        run: npm run cdk deploy -- --require-approval=never --all --app "npx ts-node --prefer-ts-exts bin/control-plane.app.ts"
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GH_WORKFLOW_URL: ${{ secrets.GH_WORKFLOW_URL }}
