--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@aws-sdk/util-arn-parser": "^3.208.0",
     "aws-cdk-lib": "2.55.0",
     "aws-lambda": "^1.0.7",
+    "clsx": "^1.2.1",
     "constructs": "^10.0.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.3",
