--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "ship:cp": "npm run cdk deploy -- --require-approval=never --app 'npx ts-node --prefer-ts-exts bin/control-plane.app.ts' --hotswap"
   },
   "devDependencies": {
-    "@aws-cdk/aws-apigatewayv2-alpha": "^2.66.0-alpha.0",
-    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.66.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.79.1-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.79.1-alpha.0",
     "@graphql-codegen/cli": "2.16.1",
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/typescript": "2.8.5",
@@ -23,9 +23,10 @@
     "@types/aws-lambda": "^8.10.110",
     "@types/jest": "^29.2.4",
     "@types/node": "18.11.15",
-    "aws-cdk": "2.66.0",
+    "aws-cdk": "2.79.1",
     "esbuild": "^0.16.10",
     "jest": "^29.3.1",
+    "sst": "^2.13.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
@@ -41,10 +42,10 @@
     "@aws-sdk/lib-dynamodb": "^3.241.0",
     "@aws-sdk/s3-request-presigner": "^3.241.0",
     "@aws-sdk/util-arn-parser": "^3.208.0",
-    "aws-cdk-lib": "2.66.0",
+    "aws-cdk-lib": "2.79.1",
     "aws-lambda": "^1.0.7",
     "clsx": "^1.2.1",
-    "constructs": "^10.0.0",
+    "constructs": "10.1.156",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
