--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@tsconfig/node18": "^1.0.1",
     "@types/aws-lambda": "^8.10.110",
     "@types/jest": "^29.2.4",
-    "@types/node": "18.11.15",
+    "@types/node": "^18.11.15",
     "aws-cdk": "2.79.1",
     "esbuild": "^0.16.10",
     "jest": "^29.3.1",
+    "node-fetch": "^3.3.1",
     "sst": "^2.13.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
@@ -42,6 +43,7 @@
     "@aws-sdk/lib-dynamodb": "^3.241.0",
     "@aws-sdk/s3-request-presigner": "^3.241.0",
     "@aws-sdk/util-arn-parser": "^3.208.0",
+    "@opentelemetry/api": "^1.4.1",
     "aws-cdk-lib": "2.79.1",
     "aws-lambda": "^1.0.7",
     "clsx": "^1.2.1",
@@ -50,7 +52,7 @@
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
     "nanoid": "^4.0.0",
     "source-map-support": "^0.5.21"
