--- a/src/control-plane/ui/app/package.json
+++ b/src/control-plane/ui/app/package.json
@@ -28,7 +28,8 @@
     "gatsby-source-filesystem": "^5.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
